[package]
name = "ruic"
version = "0.1.0"
authors = ["Joshua Booth <joshua.n.booth@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = "0.4.0"
regex = "1.5.4"
roxmltree = "0.14"
structopt = "0.3"
