[package]
name = "ruic"
version = "0.1.1"
authors = ["Joshua Booth <joshua.n.booth@gmail.com>"]
edition = "2018"
description = "Load Qt Designer .ui files into Rust code at compile time"
license = "MIT"
repository = "https://github.com/jnbooth/ruic"
categories = ["development-tools"]
keywords = ["qt"]

[dependencies]
convert_case = "0.4"
regex = "1.5"
roxmltree = "0.14"
structopt = "0.3"
